Changelog for BlueProximity

1.1 "see what's coming" - to be released
- fixed: icon shows connecting process
- fixed: no window flicker on startup (Bug #1772241) 
- fixed: first window not displaced at upper left corner (Bug #1772241)
- fixed: wrong set MAC when no config file exists, now shows correctly "not configured" in icon tooltip
- added: startup script start_proximity.sh to be run from anywhere (link it in your session startup)
- added: automatically show settings screen on first startup (Feature #1772589)
- added: pause mode via icon's context menu (Feature #1776527)
- modified: some aspects regarding easier packaging
- modified: logo
- modified: switching most bt functions to pybluez, only rssi detection relies on hcitool

1.0 "the not final one" - released 2007-08-11
initial public release